fix x overflow

--- a/public/profile.css
+++ b/public/profile.css
@@ -330,7 +330,7 @@ li.slg {
 }
 
 .option-buttons {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   justify-content: flex-start;
   gap: 4vw;
